appId: ${APP_ID}
---
- runFlow: ../subflows/launch_header_demo.yaml
- tapOn:
      id: 'header-demo-settings-button'
- extendedWaitUntil:
      visible:
          id: 'settings-demo-large-title'
      timeout: 15000
- assertNotVisible:
      id: 'settings-demo-small-title'
- assertVisible:
      id: 'settings-demo-back-button'
- runFlow:
      file: ../subflows/collapse_header.yaml
      env:
          COLLAPSED_ID: settings-demo-small-title
- assertNotVisible:
      id: 'settings-demo-large-title'
- assertVisible:
      id: 'settings-demo-back-button'
- tapOn:
      id: 'settings-demo-back-button'
- extendedWaitUntil:
      visible:
          id: 'header-demo-expanded-amount'
      timeout: 15000
